--- a/examples_min_cat_emb_dim_3.ipynb
+++ b/examples_min_cat_emb_dim_3.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, we give some examples of numerical semigroups with embedding dimension three  such that the maximum of their Delta set plus two is equal to their catenary degree. They are performed with the package $\\texttt{numericalsgps}$ for $\\texttt{GAP}$.\n",
+    "In this notebook, we give some examples of numerical semigroups with embedding dimension three such that the maximum of their Delta set plus two is equal to their catenary degree according to this [paper](https://arxiv.org/abs/1909.09419). They are performed with the package $\\texttt{numericalsgps}$ for $\\texttt{GAP}$.\n",
     "\n",
     "Let $S=\\langle n_1$, $n_2$, $n_3\\rangle$ with $2<n_1<n_2<n_3$ be a numerical semigroup with embedding dimension three. Given $\\{i, j, k\\}=\\{1,2,3\\}$, define\n",
     "$$c_i=\\min\\{k\\in\\mathbb{Z}^+ \\mid kn_i \\in \\langle n_j,n_k \\rangle\\}.$$\n",
